--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --text: #e0e0e0;
             --accent: #333;
             --highlight: #ffffff;
-            --glitch-color: #ff0055; /* Changed to BLOOD RED for this era */
+            --glitch-color: #ff0055; /* BLOOD RED */
             --green-matrix: #00ff00;
         }
         
@@ -50,7 +50,7 @@
             width: 80%;
             display: block;
             margin: 0 auto 20px auto;
-            filter: drop-shadow(0 0 10px rgba(255,0,0,0.3)); /* RED GLOW */
+            filter: drop-shadow(0 0 10px rgba(255,0,0,0.3));
         }
 
         .subtitle {
@@ -96,7 +96,7 @@
 
         .card:hover {
             border-color: var(--glitch-color);
-            background: #150505; /* Subtle red tint on hover */
+            background: #150505;
             transform: translateX(5px);
         }
         
@@ -120,14 +120,13 @@
             letter-spacing: 1px;
         }
 
-        /* --- NEW LOGO SCALING --- */
         .artist-logo-mini {
             width: 100%;
-            max-width: 280px; /* BIGGER to show detail */
+            max-width: 280px;
             height: auto;
             display: block;
             margin-bottom: 20px;
-            filter: drop-shadow(0 0 8px rgba(255, 0, 0, 0.6)); /* Blood glow */
+            filter: drop-shadow(0 0 8px rgba(255, 0, 0, 0.6));
         }
 
         /* --- ACTION BUTTONS (SUB-MENU) --- */
@@ -223,8 +222,8 @@
                 <div class="card-meta" style="margin-top:5px; font-size:0.65rem;">ASSET ID: GR-001 // PRIMARY INTERFACE</div>
 
                 <div class="action-row">
-                    <a href="https://thetrophyhoe.com/sacred-spoils" class="btn-action btn-buy">
-                        $6.66 | PRE-ORDER
+                    <a href="https://payhip.com/b/MYNlE" class="btn-action btn-buy">
+                        $6.66 | DOWNLOAD V6.66
                     </a>
                     <a href="https://thetrophyhoe.com/sacred-spoils" class="btn-action">
                         SACRED SPOILS | STORE
@@ -295,7 +294,7 @@
             DIRECT: 619.953.2720<br>
             UPLINK: <a href="mailto:stayglitched@glitchedrecords.com" style="color: #888; text-decoration: none;">stayglitched@glitchedrecords.com</a>
         </div>
-        <div>&copy; 2026 GLITCHED RECORDS. ALL RIGHTS RESERVED.</div>
+        <div>© 2026 GLITCHED RECORDS. ALL RIGHTS RESERVED.</div>
     </footer>
 
 </body>
