--- a/index.html
+++ b/index.html
@@ -179,14 +179,15 @@
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
         }
 
-        /* NEW VERTICAL 9:16 VIDEO FOR SHORTS */
+        /* FIXED VERTICAL VIDEO FOR TEASER */
         .video-container-vertical {
             position: relative; 
-            padding-bottom: 177.77%; /* 9:16 Aspect Ratio */
+            padding-bottom: 177.77%; /* Maintains 9:16 Ratio */
             height: 0; 
             margin-bottom: 15px; 
             border: 1px solid #333;
-            max-width: 320px; /* Constrain width on desktop */
+            /* FIX: Reduced max-width to 200px. This forces the height to be much smaller (~350px) */
+            max-width: 200px; 
             margin-left: auto;
             margin-right: auto;
         }
@@ -259,7 +260,7 @@
         <div class="full-width">
             <div class="section-title">DIVISION 02: VISUAL WORKS</div>
             
-            <div class="card" style="margin-bottom: 15px;">
+            <div class="card" style="margin-bottom: 15px; text-align: center;">
                 <div class="video-container-vertical">
                     <iframe src="https://www.youtube.com/embed/mnYIsO-iQ-c" frameborder="0" allowfullscreen></iframe>
                 </div>
